// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/Input Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":ru:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":ru:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":ru:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
      id=":ru:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Disabled 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r10:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":r10:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":r10:-description"
      aria-invalid={false}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-neutral-200"
      disabled={true}
      id=":r10:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/Input Error 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="mr-2 inline uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":rv:"
  >
    Input Label 
  </label>
  <p
    className="text-body-400 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Input description",
      }
    }
    data-testid="txt"
    id=":rv:-description"
  />
  <div
    className="relative"
  >
    <input
      aria-describedby=":rv:-description"
      aria-errormessage="Field Required"
      aria-invalid={true}
      className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent px-3 py-[9px] rounded-lg focus:border-primary-500 border border-error focus:border-error"
      id=":rv:"
      placeholder="Input placeholder"
      type="text"
    />
  </div>
  <div
    className="flex w-full items-center gap-3 mt-2"
  >
    <div
      style={
        Object {
          "height": undefined,
          "width": 20,
        }
      }
    />
    <span
      className="w-full text-left text-error text-body-500"
      data-testid="txt"
    >
      Field Required
    </span>
  </div>
</div>
`;
